--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -1,78 +1,83 @@
-<%- include ("header.ejs") %>
-<div class="container mt-5">
-    <h1 class="mb-4">Order History</h1>
+    <%- include ("header.ejs") %>
+    <div class="container mt-5">
+        <h1 class="mb-4">Order History</h1>
 
-    <% if (orders.length === 0) { %>
-        <p>No orders found.</p>
-    <% } else { %>
-        <% orders.forEach(order => { %>
-            <div class="card mb-3">
-                <div class="card-header">
-                    <h5>Order ID: <%= order.orderId %></h5>
-                </div>
-                <div class="card-body">
-                    <p>Amount: <span class="text-black font-weight-bold">₹<%= order.amount %></span></p>
-                    <p>Status: <span class="text-black font-weight-bold"><%= order.status %></span></p>
-                    <% if (order.address) { %>
-                        <% order.address.forEach(address => { %>
-                            <p>Delivery Address:<span class="text-black font-weight-bold"><%= address.save_as %>, <%= address.housename %>, <%= address.city %>, <%= address.pincode %></span></p>
-                        <% }); %>
-                    <% } else { %>
-                        <p>Delivery Address: N/A</p>
-                    <% } %>
-                    <div class="row">
-                        <% order.items.forEach(item => { %>
-                            <div class="col-md-4 mb-3">
-                                <div class="card">
-                                    <% if (item.productId.image && item.productId.image.length > 0) { %>
-                                        <img src="/<%= item.productId.image[0] %>" class="card-img-top" alt="" style="height: 250px; object-fit: cover;">
-                                    <% } else { %>
-                                        <div class="card-img-top" style="height: 250px; background-color: #ccc;"></div>
-                                    <% } %>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Product Name: <%= item.productId.name %></h5>
-                                        <p class="card-text">Quantity: <%= item.quantity %></p>
-                                    </div>
-                                    <div class="card-footer" style="text-align: center;">
-                                        <a onclick="confirm('/itemCancel/<%= order._id %>/<%= item.productId %>')"  class="btn btn-primary" style="font-size: 16px; color: white;"> Cancel Product</a>
+        <% if (orders.length === 0) { %>
+            <p>No orders found.</p>
+        <% } else { %>
+            <% orders.forEach(order => { %>
+                <div class="card mb-3">
+                    <div class="card-header">
+                        <h5>Order ID: <%= order.orderId %></h5>
+                    </div>
+                    <div class="card-body">
+                        <p>Amount: <span class="text-black font-weight-bold">₹<%= order.amount %></span></p>
+                        <p>Status: <span class="text-black font-weight-bold"><%= order.status %></span></p>
+                        <% if (order.address) { %>
+                            <% order.address.forEach(address => { %>
+                                <p>Delivery Address:<span class="text-black font-weight-bold"><%= address.save_as %>, <%= address.housename %>, <%= address.city %>, <%= address.pincode %></span></p>
+                            <% }); %>
+                        <% } else { %>
+                            <p>Delivery Address: N/A</p>
+                        <% } %>
+                        <div class="row">
+                            <% order.items.forEach(item => { %>
+                                <div class="col-md-4 mb-3">
+                                    <div class="card">
+                                        <% if (item.productId.image && item.productId.image.length > 0) { %>
+                                            <img src="/<%= item.productId.image[0] %>" class="card-img-top" alt="" style="height: 250px; object-fit: cover;">
+                                        <% } else { %>
+                                            <div class="card-img-top" style="height: 250px; background-color: #ccc;"></div>
+                                        <% } %>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Product Name: <%= item.productId.name %></h5>
+                                            <p class="card-text">Quantity: <%= item.quantity %></p>
+                                            <p class="card-text">Size: <%= item.size %></p>
+                                        </div>
+                                        <% if (order.status !== 'Cancelled' && order.status !== 'delivered' && order.status !== 'returned') { %>
+                                            <div class="card-footer" style="text-align: center;">
+                                                <a onclick="confirm(`/itemCancel/<%= order._id %>/<%=item.productId._id%>`)" class="btn btn-primary" style="font-size: 16px; color: white; cursor: pointer;"> Cancel Product</a>
+                                            </div>
+                                        <% } %>
                                     </div>
                                 </div>
-                            </div>
-                        <% }); %>
+                            <% }); %>
+                            
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="/order-tracking/<%= order._id %>"> Order Details</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <% if (order.status !== 'Cancelled' && order.status !== 'delivered' && order.status !== 'returned') { %>
+                            <a onclick="confirm('/cancelorder/<%= order._id %>')" style="cursor: pointer; color: red; font-weight: 200;"> Cancel Order</a>
+                        <% } %>
+                        <% if (order.status === 'delivered' && new Date(order.updated.getTime() + 5 * 24 * 60 * 60 * 1000) >= new Date()) { %>
+                            <a onclick="confirm('/returnorder/<%= order._id %>')" style="cursor: pointer;"> Return</a>
+                        <% } %>
                     </div>
                 </div>
-                <div class="card-footer">
-                    <a href="/order-tracking/<%= order._id %>"> Order Details</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <% if (order.status !== 'Cancelled' && order.status !== 'delivered' && order.status !== 'returned') { %>
-                        <a onclick="confirm('/cancelorder/<%= order._id %>')" style="cursor: pointer; color: red; font-weight: 200;"> Cancel Order</a>
-                    <% } %>
-                    <% if (order.status === 'delivered' && new Date(order.updated.getTime() + 5 * 24 * 60 * 60 * 1000) >= new Date()) { %>
-                        <a onclick="confirm('/returnorder/<%= order._id %>')" style="cursor: pointer;"> Return</a>
-                    <% } %>
-                </div>
-            </div>
-        <% }); %>
-    <% } %>
-</div>
-<script>
-    function confirm(itemId) {
-        Swal.fire({
-            title: "Are you sure?",
-            text: "Are you sure you want to proceed?",
-            icon: "warning",
-            showCancelButton: true,
-            confirmButtonColor: "#3085d6",
-            cancelButtonColor: "#d33",
-            confirmButtonText: "Confirm",
-            cancelButtonText: "Cancel",
-            dangerMode: true,
-        }).then((result) => {
-            if (result.isConfirmed) {
-                window.location.href = itemId;
-            } else {
-                console.log("User canceled");
-            }
-        });
-    }
-</script>
-<%- include ("footer.ejs") %>
+            <% }); %>
+        <% } %>
+    </div>
+    <script>
+        function confirm(itemId) {
+            Swal.fire({
+                title: "Are you sure?",
+                text: "Are you sure you want to proceed?",
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Confirm",
+                cancelButtonText: "Cancel",
+                dangerMode: true,
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    window.location.href = itemId;
+                } else {
+                    console.log("User canceled");
+                }
+            });
+        }
+        
+    </script>
+    <%- include ("footer.ejs") %>
