Added chart,wallet page

--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -37,7 +37,7 @@
           </li>
           <li>
             <div class="option-wrapper">
-              <a href="#">Wallet</a>
+              <a href="/wallet">Wallet</a>
             </div>
           </li>
           <li>
