--- a/views/user/header.ejs
+++ b/views/user/header.ejs
@@ -37,7 +37,7 @@
           <div class="row align-items-center">
 
             <div class="col-6 col-md-4 order-2 order-md-1 site-search-icon text-left">
-              <form action="/search" class="site-block-top-search">
+              <form action="/shop?search" class="site-block-top-search">
                 <span class="icon icon-search2"></span>
                 <input type="text" name="search" class="form-control border-1" placeholder="Search">
               </form>
