--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -1,4 +1,11 @@
     <%- include ("header.ejs") %>
+    <div class="bg-light py-3">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 mb-0"><a href="/profile">User</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Orders</strong></div>
+          </div>
+        </div>
+      </div>
     <div class="container mt-5">
         <h1 class="mb-4">Order History</h1>
 
