--- a/views/user/ordertracking.ejs
+++ b/views/user/ordertracking.ejs
@@ -1,4 +1,11 @@
 <%- include ("header.ejs") %>
+<div class="bg-light py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 mb-0"><a href="/profile">User</a> <span class="mx-2 mb-0">/</span><a href="/orders">Orders</a><span class="mx-2 mb-0">/</span> <strong class="text-black">OrderDetails</strong></div>
+      </div>
+    </div>
+  </div>
 <div class="container mt-5 text-center"> <!-- Added 'text-center' class to center content -->
     <div class="row">
         <div class="col-12 col-md-10 hh-grayBox mx-auto text-center pt-4 pb-4">
