--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -1,5 +1,11 @@
 <%- include ("header.ejs") %>
-<hr>
+<div class="bg-light py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 mb-0"><a href="/profile">User</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Reset Password</strong></div>
+      </div>
+    </div>
+  </div>
 <style>
     .border-rounded {
         width: fit-content;
