--- a/views/admin/addCategory.ejs
+++ b/views/admin/addCategory.ejs
@@ -28,6 +28,11 @@
             <%= catError%>
         </div>
             <%}%>
+        <div class="form-group ">
+          <label for="price">Discount:   (in Percentage)</label>
+          <input type="number" class="form-control" id="discount" name="discount" min="0" required>
+          <div id="discountError" class="text-danger"></div>
+        </div>
       <button type="submit" class="btn btn-primary">Add Category</button>
     </form>
   </div>
