--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -43,6 +43,11 @@
           <div id="priceError" class="text-danger"></div>
         </div>
         <div class="form-group col-md-6">
+          <label for="price">Discount:   (in Percentage)</label>
+          <input type="number" class="form-control" id="discount" name="discount" min="0" required>
+          <div id="discountError" class="text-danger"></div>
+        </div>
+        <div class="form-group col-md-6">
           <label for="image">Image:</label>
           <input type="file" class="form-control-file" id="image" name="images" accept="image/*" multiple required>
           <div id="imageError" class="text-danger"></div>
