--- a/views/admin/updateProduct.ejs
+++ b/views/admin/updateProduct.ejs
@@ -29,6 +29,11 @@
         <input type="number" class="form-control" id="price" name="price" min="0" value="<%=product.price%>" required>
         <div id="priceError" class="text-danger"></div>
       </div>
+      <div class="form-group ">
+        <label for="price">Discount:   (in Percentage)</label>
+        <input type="number" class="form-control" id="discount" name="discount" min="0" value="<%=product.discount%>" required>
+        <div id="discountError" class="text-danger"></div>
+      </div>
       <div class="form-group">
         <label for="stock">Stock:</label>
         <div class="mb-3 d-flex">
