--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,134 +1,117 @@
 <%- include ('header.ejs') %>
 
 
-  <div class="site-blocks-cover"
-    style="background-image: url(../static/images/still-life-with-classic-shirts-hanger_23-2150828574.avif);"
-    data-aos="fade">
-    <div class="container">
-      <div class="row align-items-start align-items-md-center justify-content-end">
-        <div class="col-md-5 text-center text-md-left pt-5 pt-md-0">
-          <h1 class="mb-2">Finding Your Perfect Dress</h1>
-          <div class="intro-text text-center text-md-left">
-            <p class="mb-4">Discover the dress of your dreams with our expert guidance and wide selection. From elegant
-              shirts to trendy styles, we'll help you find the perfect dress for any occasion.</p>
-            <p>
-              <a href="/shop" class="btn btn-sm btn-primary">Shop Now</a>
-            </p>
-          </div>
+<div class="site-blocks-cover" style="background-image: url(../static/images/still-life-with-classic-shirts-hanger_23-2150828574.avif);" data-aos="fade">
+  <div class="container">
+    <div class="row align-items-start align-items-md-center justify-content-end">
+      <div class="col-md-5 text-center text-md-left pt-5 pt-md-0">
+        <h1 class="mb-2">Finding Your Perfect Dress</h1>
+        <div class="intro-text text-center text-md-left">
+          <p class="mb-4">Discover the dress of your dreams with our expert guidance and wide selection. From elegant shirts to trendy styles, we'll help you find the perfect dress for any occasion.</p>
+          <p>
+            <a href="/shop" class="btn btn-sm btn-primary">Shop Now</a>
+          </p>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="site-section site-section-sm site-blocks-1">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="">
-          <div class="icon mr-4 align-self-start">
-            <span class="icon-truck"></span>
-          </div>
-          <div class="text">
-            <h2 class="text-uppercase">Free Shipping</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-              tincidunt fringilla.</p>
-          </div>
+<div class="site-section site-section-sm site-blocks-1">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="">
+        <div class="icon mr-4 align-self-start">
+          <span class="icon-truck"></span>
         </div>
-        <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="icon mr-4 align-self-start">
-            <span class="icon-refresh2"></span>
-          </div>
-          <div class="text">
-            <h2 class="text-uppercase">Free Returns</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-              tincidunt fringilla.</p>
-          </div>
+        <div class="text">
+          <h2 class="text-uppercase">Free Shipping</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan tincidunt fringilla.</p>
         </div>
-        <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="200">
-          <div class="icon mr-4 align-self-start">
-            <span class="icon-help"></span>
-          </div>
-          <div class="text">
-            <h2 class="text-uppercase">Customer Support</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-              tincidunt fringilla.</p>
-          </div>
+      </div>
+      <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="icon mr-4 align-self-start">
+          <span class="icon-refresh2"></span>
+        </div>
+        <div class="text">
+          <h2 class="text-uppercase">Free Returns</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan tincidunt fringilla.</p>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="icon mr-4 align-self-start">
+          <span class="icon-help"></span>
+        </div>
+        <div class="text">
+          <h2 class="text-uppercase">Customer Support</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan tincidunt fringilla.</p>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="site-section site-blocks-2">
-    <div class="container">
-      <div class="row">
-        <% categories.filter(category=> category.status !== false).forEach(category => { %>
-          <% const categoryProduct=products.find(product=> product.category.toString() === category._id.toString()); %>
-            <% if (categoryProduct && categoryProduct.image.length> 0) { %>
-              <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
-                <a class="block-2-item" href="/shop?category=<%= category._id %>">
-                  <figure class="image">
-                    <img src="<%= categoryProduct.image[0] %>" alt="" class="img-fluid">
-                  </figure>
-                  <div class="text">
-                    <span class="text-uppercase">Collections</span>
-                    <h3>
-                      <%= category.name %>
-                    </h3>
-                  </div>
-                </a>
-              </div>
-              <% } else { %>
-                <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" style="height: 300px;"></div>
-                <% } %>
-                  <% }); %>
+<div class="site-section site-blocks-2">
+  <div class="container">
+    <div class="row">
+      <% categories.filter(category => category.status !== false).forEach(category => { %>
+      <% const categoryProduct = products.find(product => product.category.toString() === category._id.toString()); %>
+      <% if (categoryProduct && categoryProduct.image.length > 0) { %>
+      <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
+        <a class="block-2-item" href="/shop?category=<%= category._id %>">
+          <figure class="image">
+            <img src="<%= categoryProduct.image[0] %>" alt="" class="img-fluid">
+          </figure>
+          <div class="text">
+            <span class="text-uppercase">Collections</span>
+            <h3><%= category.name %></h3>
+          </div>
+        </a>
       </div>
+      <% } else { %>
+      <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" style="height: 300px;"></div>
+      <% } %>
+      <% }); %>
     </div>
   </div>
+</div>
 
-
-
-
-  <div class="site-section block-3 site-blocks-2 bg-light">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-7 site-section-heading text-center pt-4">
-          <h2>Featured Products</h2>
-        </div>
+<div class="site-section block-3 site-blocks-2 bg-light">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-7 site-section-heading text-center pt-4">
+        <h2>Featured Products</h2>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="nonloop-block-3 owl-carousel">
-            <% products.forEach(product=> { %>
-              <div class="item">
-                <a href="/shopSingle/<%= product._id %>">
-                <div class="block-4 text-center">
-                  <figure class="block-4-image">
-                    <img src="/<%= product.image[0] %>" alt="Image placeholder" class="img-fluid">
-                  </figure>
-                  <div class="block-4-text p-4">
-                    <h3><a href="/shopSingle/<%= product._id %>">
-                        <%= product.name %>
-                      </a></h3>
-                    <p class="mb-0">
-                      <%= product.description %>
-                    </p>
-                    <p class="text-primary font-weight-bold my-0" style="line-height: 2; font-size: 18px;">
-                      <span style="text-decoration: line-through;"><%= product.price %></span>&nbsp;
-                      ₹<%= product.discountPrice %>
-                    </p>
-                    <p class="text-primary my-0" style="line-height: 0.5;">
-                      <%= product.discount %>% OFF
-                    </p>
-                    
-                  </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="nonloop-block-3 owl-carousel">
+          <% products.forEach(product => { %>
+          <div class="item">
+            <a href="/shopSingle/<%= product._id %>">
+              <div class="block-4 text-center">
+                <figure class="block-4-image">
+                  <img src="/<%= product.image[0] %>" alt="Image placeholder" class="img-fluid">
+                </figure>
+                <div class="block-4-text p-4">
+                  <h3><a href="/shopSingle/<%= product._id %>"><%= product.name %></a></h3>
+                  <p class="mb-0"><%= product.description %></p>
+                  <p class="text-primary font-weight-bold my-0" style="line-height: 2; font-size: 18px;">
+                    <span style="text-decoration: line-through;"><%= product.price %></span>&nbsp;
+                    ₹<%= product.discountPrice %>
+                  </p>
+                  <p class="text-primary my-0" style="line-height: 0.5;"><%= product.discount %>% OFF</p>
                 </div>
-              </a>
               </div>
-              <% }); %>
+            </a>
           </div>
+          <% }); %>
         </div>
       </div>
     </div>
   </div>
+</div>
+
 
 
 
