--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -1,69 +1,97 @@
-    <%- include ("header.ejs") %>
+<%- include ("header.ejs") %>
     <div class="bg-light py-3">
         <div class="container">
-          <div class="row">
-            <div class="col-md-12 mb-0"><a href="/profile">User</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Orders</strong></div>
-          </div>
+            <div class="row">
+                <div class="col-md-12 mb-0"><a href="/profile">User</a> <span class="mx-2 mb-0">/</span> <strong
+                        class="text-black">Orders</strong></div>
+            </div>
         </div>
-      </div>
+    </div>
     <div class="container mt-5">
         <h1 class="mb-4">Order History</h1>
 
-        <% if (orders.length === 0) { %>
+        <% if (orders.length===0) { %>
             <p>No orders found.</p>
-        <% } else { %>
-            <% orders.forEach(order => { %>
-                <div class="card mb-3">
-                    <div class="card-header">
-                        <h5>Order ID: <%= order.orderId %></h5>
-                    </div>
-                    <div class="card-body">
-                        <p>Amount: <span class="text-black font-weight-bold">₹<%= order.amount %></span></p>
-                        <p>Status: <span class="text-black font-weight-bold"><%= order.status %></span></p>
-                        <% if (order.address) { %>
-                            <% order.address.forEach(address => { %>
-                                <p>Delivery Address:<span class="text-black font-weight-bold"><%= address.save_as %>, <%= address.housename %>, <%= address.city %>, <%= address.pincode %></span></p>
-                            <% }); %>
-                        <% } else { %>
-                            <p>Delivery Address: N/A</p>
-                        <% } %>
-                        <div class="row">
-                            <% order.items.forEach(item => { %>
-                                <div class="col-md-4 mb-3">
-                                    <div class="card">
-                                        <% if (item.productId.image && item.productId.image.length > 0) { %>
-                                            <img src="/<%= item.productId.image[0] %>" class="card-img-top" alt="" style="height: 250px; object-fit: cover;">
+            <% } else { %>
+                <% orders.forEach(order=> { %>
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            <h5>Order ID: <%= order.orderId %>
+                            </h5>
+                        </div>
+                        <div class="card-body">
+                            <p>Amount: <span class="text-black font-weight-bold">₹<%= order.amount %></span></p>
+                            <p>Status: <span class="text-black font-weight-bold">
+                                    <%= order.status %>
+                                </span></p>
+                            <% if (order.address) { %>
+                                <% order.address.forEach(address=> { %>
+                                    <p>Delivery Address:<span class="text-black font-weight-bold">
+                                            <%= address.save_as %>, <%= address.housename %>, <%= address.city %>, <%=
+                                                            address.pincode %>
+                                        </span></p>
+                                    <% }); %>
                                         <% } else { %>
-                                            <div class="card-img-top" style="height: 250px; background-color: #ccc;"></div>
+                                            <p>Delivery Address: N/A</p>
+                                            <% } %>
+                                                <div class="row">
+                                                    <% order.items.forEach(item=> { %>
+                                                        <div class="col-md-4 mb-3">
+                                                            <div class="card">
+                                                                <% if (item.productId.image &&
+                                                                    item.productId.image.length> 0) { %>
+                                                                    <img src="/<%= item.productId.image[0] %>"
+                                                                        class="card-img-top" alt=""
+                                                                        style="height: 250px; object-fit: cover;">
+                                                                    <% } else { %>
+                                                                        <div class="card-img-top"
+                                                                            style="height: 250px; background-color: #ccc;">
+                                                                        </div>
+                                                                        <% } %>
+                                                                            <div class="card-body">
+                                                                                <h5 class="card-title">Product Name: <%=
+                                                                                        item.productId.name %>
+                                                                                </h5>
+                                                                                <p class="card-text">Quantity: <%=
+                                                                                        item.quantity %>
+                                                                                </p>
+                                                                                <p class="card-text">Size: <%= item.size
+                                                                                        %>
+                                                                                </p>
+                                                                            </div>
+                                                                            <% if (order.status !=='Cancelled' &&
+                                                                                order.status !=='delivered' &&
+                                                                                order.status !=='returned' ) { %>
+                                                                                <div class="card-footer"
+                                                                                    style="text-align: center;">
+                                                                                    <a onclick="confirm(`/itemCancel/<%= order._id %>/<%=item.productId._id%>`)"
+                                                                                        class="btn btn-primary"
+                                                                                        style="font-size: 16px; color: white; cursor: pointer;">
+                                                                                        Cancel Product</a>
+                                                                                </div>
+                                                                                <% } %>
+                                                            </div>
+                                                        </div>
+                                                        <% }); %>
+
+                                                </div>
+                        </div>
+                        <div class="card-footer">
+                            <a href="/order-tracking/<%= order._id %>"> Order Details</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                            <% if (order.status !=='Cancelled' && order.status !=='delivered' && order.status
+                                !=='returned' ) { %>
+                                <a onclick="confirm('/cancelorder/<%= order._id %>')"
+                                    style="cursor: pointer; color: red; font-weight: 200;"> Cancel Order</a>
+                                <% } %>
+                                    <% if (order.status==='delivered' && new Date(order.updated.getTime() + 5 * 24 * 60
+                                        * 60 * 1000)>= new Date()) { %>
+                                        <a onclick="confirmm('<%= order._id %>')" style="cursor: pointer;">
+                                            Return</a>
                                         <% } %>
-                                        <div class="card-body">
-                                            <h5 class="card-title">Product Name: <%= item.productId.name %></h5>
-                                            <p class="card-text">Quantity: <%= item.quantity %></p>
-                                            <p class="card-text">Size: <%= item.size %></p>
-                                        </div>
-                                        <% if (order.status !== 'Cancelled' && order.status !== 'delivered' && order.status !== 'returned') { %>
-                                            <div class="card-footer" style="text-align: center;">
-                                                <a onclick="confirm(`/itemCancel/<%= order._id %>/<%=item.productId._id%>`)" class="btn btn-primary" style="font-size: 16px; color: white; cursor: pointer;"> Cancel Product</a>
-                                            </div>
-                                        <% } %>
-                                    </div>
-                                </div>
-                            <% }); %>
-                            
                         </div>
                     </div>
-                    <div class="card-footer">
-                        <a href="/order-tracking/<%= order._id %>"> Order Details</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                        <% if (order.status !== 'Cancelled' && order.status !== 'delivered' && order.status !== 'returned') { %>
-                            <a onclick="confirm('/cancelorder/<%= order._id %>')" style="cursor: pointer; color: red; font-weight: 200;"> Cancel Order</a>
+                    <% }); %>
                         <% } %>
-                        <% if (order.status === 'delivered' && new Date(order.updated.getTime() + 5 * 24 * 60 * 60 * 1000) >= new Date()) { %>
-                            <a onclick="confirm('/returnorder/<%= order._id %>')" style="cursor: pointer;"> Return</a>
-                        <% } %>
-                    </div>
-                </div>
-            <% }); %>
-        <% } %>
     </div>
     <script>
         function confirm(itemId) {
@@ -85,6 +113,37 @@
                 }
             });
         }
-        
+        function confirmm(itemId) {
+            Swal.fire({
+                title: 'Order Return',
+                input: 'text',
+                inputPlaceholder: 'Enter your Reason',
+                showCancelButton: true,
+                confirmButtonText: 'Submit',
+                cancelButtonText: 'Cancel',
+                inputValidator: (value) => {
+                    if (!value) {
+                        return 'You need to enter something!';
+                    }
+                }
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    const inputValue = result.value;
+                    $.ajax({
+                        url: '/returnReason',
+                        method: 'POST',
+                        data: { itemId: itemId, reason: inputValue },
+                        success: function (response) {
+                            Swal.fire('Submitted!', `Your reason has been submitted.`, 'success');
+                        },
+                        error: function (xhr, status, error) {
+                            Swal.fire('Error!', `Failed to send data: ${error}`, 'error');
+                        }
+                    });
+                }
+            });
+        }
+
+
     </script>
     <%- include ("footer.ejs") %>
