--- a/views/admin/order.ejs
+++ b/views/admin/order.ejs
@@ -2,9 +2,6 @@
     <div class="container-fluid">
         <div class="row my-4">
             <div class="col-lg-12">
-                <a href="/admin/addCategory" class="btn btn-primary mb-3">Add New Category</a>
-            </div>
-            <div class="col-lg-12">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search..." id="searchInput">
                     <button class="btn btn-outline-secondary" type="button" id="searchButton">Search</button>
@@ -12,9 +9,9 @@
             </div>
             <div class="col-lg-12 mt-4">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
-                        <thead class="thead-dark">
-                            <tr>
+                    <table class="table table-striped text-center">
+                        <thead >
+                            <tr class="table-primary">
                                 <th>Order ID</th>
                                 <th>User ID</th>
                                 <th>Products</th>
