--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,34 +1,129 @@
-<%- include ("header.ejs") %>
-    <div class="login-container">
-        <h1>User Login</h1>
-        <br>
-        <form class="loginForm" action="/login" method="post" onsubmit="return validateEmail() && validatePassword()">
-            <label class="loginEmailLabel" for="email">Email:</label>
-            <input class="loginEmailInput" type="email" id="email" name="email" onkeyup="validateEmail()" required>
-            <span id="emailerror"></span>
-            <br>
-            <label class="loginPasswordLabel" for="password">Password:</label>
-            <input class="loginPasswordInput" type="password" id="password" name="password" onkeyup="validatePassword()"
-                required>
-            <span id="passwordError"></span>
-            <br>
-            <button class="loginSubmit" type="submit">Login</button><a href="/forgotPassword">Forgot Password</a>
+<!DOCTYPE html>
+<html lang="en">
 
-            <% if(expressFlash.invalidpassword){%>
-                <div style="color: red; font-size: 16px; font-weight: bold;">
-                    <%= expressFlash.invalidpassword%>
-                </div>
-                <%}%>
-                    <% if(expressFlash.invaliduser){%>
-                        <div style="color: red; font-size: 16px; font-weight: bold;">
-                            <%= expressFlash.invaliduser%>
+<head>
+    <title>VintageRags</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" type="image/png" href="../../static/images/logo.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
+    <link rel="stylesheet" href="../../static/css/magiczoom.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
+    <link rel="stylesheet" href="../static/fonts/icomoon/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
+
+
+
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/magnific-popup.css">
+    <link rel="stylesheet" href="../static/css/jquery-ui.css">
+    <link rel="stylesheet" href="../static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../static/css/owl.theme.default.min.css">
+
+
+    <link rel="stylesheet" href="../static/css/aos.css">
+
+    <link rel="stylesheet" href="../static/css/style.css">
+    <style>
+        /* Custom CSS for moving the container down */
+        .container {
+            position: absolute;
+            top: 48%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
+
+</head>
+
+<body>
+    <div class="container mt-10">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h1 class="card-title text-center">User Login</h1>
+                        <form action="/login" method="post" onsubmit="return validateEmail()&&validatePassword()">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email:</label>
+                                <input type="email" class="form-control" id="email" name="email" onkeyup="validateEmail()" required>
+                                <div id="emailerror"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password:</label>
+                                <input type="password" class="form-control" id="password" name="password" onkeyup="validatePassword()" required>
+                                <div id="passwordError"></div>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Login</button>
+                            <a href="/forgotPassword" class="d-block mt-2">Forgot Password</a>
+                        </form>
+                        <div class="mt-3">
+                            <% if(expressFlash.invalidpassword && expressFlash.invalidpassword.length > 0) { %>
+                                <div class="alert alert-danger" role="alert">
+                                    <%= expressFlash.invalidpassword %>
+                                </div>
+                            <% } %>
+                            <% if(expressFlash.invaliduser && expressFlash.invaliduser.length > 0) { %>
+                                <div class="alert alert-danger" role="alert">
+                                    <%= expressFlash.invaliduser %>
+                                </div>
+                            <% } %>
                         </div>
-                        <%}%>
-        </form>
-        <br>
-        <a href="/googleSignIn" class="google-sign-in"> <img src="../../static/images/New-Google-Logo.jpg"
-                alt="Google Logo" class="google-logo">Sign in with Google</a>
-        <p class="loginQuestion">Don't have an account? <a href="/signup" class="loginSignup">Signup</a></p>
+                        <hr>
+                        <a href="/googleSignIn" class="btn btn-outline-danger w-100">
+                            <img src="../../static/images/New-Google-Logo.jpg" alt="Google Logo" class="google-logo"> Sign in with Google
+                        </a>
+                        <p class="text-center mt-3">Don't have an account? <a href="/signup">Sign Up</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <%- include ("footer.ejs") %>
+    <script>
+        function validateEmail() {
+            var emailError = document.getElementById('emailerror');
+            var email = document.getElementById('email').value;
+            if (!email.match(/^[A-Za-z\._\-[0-9]+@[A-Za-z]+\.[a-z]{2,}$/)) {
+                emailError.innerHTML = 'Email is invalid'
+                return false;
+            } else {
+                emailError.innerHTML = ''
+                return true;
+            }
+
+        }
+        function validatePassword() {
+            var passwordError = document.getElementById('passwordError');
+            var password = document.getElementById('password').value;
+
+            if (!password.match(/^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*()-_+=<>?])[A-Za-z\d\S]{8,}$/)) {
+                passwordError.innerHTML = 'Password must meet the following criteria:<br>' +
+                    '- At least 8 characters in length<br>' +
+                    '- At least one letter (uppercase or lowercase)<br>' +
+                    '- At least one digit<br>' +
+                    '- At least one symbol';
+                return false;
+            } else {
+                passwordError.innerHTML = '';
+                return true;
+            }
+        } 
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
+    <script src="../../static/js/magiczoom.js"></script>
+    <script src="../static/js/jquery-3.3.1.min.js"></script>
+    <script src="../static/js/popper.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/jquery-ui.js"></script>
+    <script src="../static/js/owl.carousel.min.js"></script>
+    <script src="../static/js/jquery.magnific-popup.min.js"></script>
+    <script src="../static/js/aos.js"></script>
+
+    <script src="../static/js/main.js"></script>
+
+</body>
+
+</html>
