--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -83,11 +83,20 @@
                                 <a onclick="confirm('/cancelorder/<%= order._id %>')"
                                     style="cursor: pointer; color: red; font-weight: 200;"> Cancel Order</a>
                                 <% } %>
-                                    <% if (order.status==='delivered' && new Date(order.updated.getTime() + 5 * 24 * 60
-                                        * 60 * 1000)>= new Date()) { %>
-                                        <a onclick="confirmm('<%= order._id %>')" style="cursor: pointer;">
-                                            Return</a>
-                                        <% } %>
+                                    <% if( order.return && order.return.length> 0 &&
+                                        order.return[0].status === false) {%>
+                                        <span style="color: black;">Return Status: <span
+                                                style="color:red;">Pending</span></span>
+                                        <%}else if (order.return && order.return.length> 0 &&
+                                            order.return[0].status === true) {%>
+                                            <span style="color: black;">Return Status: <span
+                                                    style="color:green;">Successfull</span></span>
+                                            <%}else if (order.status==='delivered' && new Date(order.updated.getTime() +
+                                                5 * 24 * 60 * 60 * 1000)>= new Date()) {%>
+                                                <a onclick="confirmm('<%= order._id %>')" style="cursor: pointer;">
+                                                    Return</a>
+                                                <%}%>
+
                         </div>
                     </div>
                     <% }); %>
@@ -135,6 +144,10 @@
                         data: { itemId: itemId, reason: inputValue },
                         success: function (response) {
                             Swal.fire('Submitted!', `Your reason has been submitted.`, 'success');
+                            setTimeout(function () {
+                                location.reload();
+                            }, 1000);
+
                         },
                         error: function (xhr, status, error) {
                             Swal.fire('Error!', `Failed to send data: ${error}`, 'error');
