--- a/views/admin/adminHead.ejs
+++ b/views/admin/adminHead.ejs
@@ -9,6 +9,17 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="../../static/images/logo.png" />
   <link rel="stylesheet" href="../../static/admin/css/styles.min.css" />
+  <style>
+    .equal-btns {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .equal-btns .btn {
+      flex: 0.45;
+    }
+  </style>
+
 </head>
 
 <body>
